crates/credential/tests/probes/capability_subtrait_refreshable_no_method.stderr
error[E0046]: not all trait items implemented, missing: `refresh`
  --> tests/probes/capability_subtrait_refreshable_no_method.rs:54:1
   |
54 | impl Refreshable for Dummy {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `refresh` in implementation
   |
   = help: implement the missing item: `fn refresh(_: &mut <Self as Credential>::State, _: &CredentialContext) -> impl Future<Output = Result<RefreshOutcome, CredentialError>> + Send { todo!() }`
